feat: rework to better named endpoint
